--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/driveGroups
 spring.datasource.username=development
 spring.datasource.password=devdb
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 
